--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
+    "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "next": "15.1.1",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
