--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
+    "@zxing/library": "^0.21.3",
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
     "html2canvas": "^1.4.1",
